--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,52 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // Jackson
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.6', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.7.4', configuration: 'master'
+
+    // Slf4j
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21', configuration: 'master'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21', configuration: 'master'
+    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21', configuration: 'master'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17', configuration: 'master'
+
+    // Apache
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+
+    // Commons
+    implementation group: 'commons-logging', name: 'commons-logging', version: '1.1.1', configuration: 'default'
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4', configuration: 'master'
+    implementation group: 'commons-collections', name: 'commons-collections', version: '3.2.1', configuration: 'master'
+    implementation group: 'commons-digester', name: 'commons-digester', version: '1.8', configuration: 'master'
+    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6', configuration: 'master'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.6', configuration: 'master'
+    implementation group: 'commons-pool', name: 'commons-pool', version: '1.5.6', configuration: 'master'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.9', configuration: 'master'
+    implementation group: 'commons-jxpath', name: 'commons-jxpath', version: '1.3', configuration: 'master'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5', configuration: 'master'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.2', configuration: 'master'
+
+    // Other
+    implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+    implementation group: 'com.intellij', name: 'annotations', version: '12.0'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
+    // Tests
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.6.2'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.24.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+    testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.10.5'
+    testImplementation group: 'org.objenesis', name: 'objenesis', version: '2.6'
+}
+
+test {
+    useJUnitPlatform()
 }
