--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ repositories {
 dependencies {
 
     // Jackson
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.6', configuration: 'master'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6', configuration: 'master'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6', configuration: 'master'
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.7.4', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.11.0', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0', configuration: 'master'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.11.0', configuration: 'master'
 
     // Slf4j
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21', configuration: 'master'
@@ -24,7 +24,7 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17', configuration: 'master'
 
     // Apache
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
 
     // Commons
     implementation group: 'commons-logging', name: 'commons-logging', version: '1.1.1', configuration: 'default'
@@ -40,8 +40,8 @@ dependencies {
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.2', configuration: 'master'
 
     // Other
-    implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
-    implementation group: 'com.intellij', name: 'annotations', version: '12.0'
+    implementation group: 'com.google.guava', name: 'guava', version: '28.0-jre'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '18.0.0'
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
@@ -50,7 +50,7 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.6.2'
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.24.1'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
     testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.10.5'
     testImplementation group: 'org.objenesis', name: 'objenesis', version: '2.6'
